2007-11-11 Jim Garlick <garlick.jim@gmail.com>

	* src/dg535.c : Added trigger control functions.

2007-11-10 Jim Garlick <garlick.jim@gmail.com>

	* src/ics8000.x : Corrected several errors [Jay Berg]

	* src/ics8065.c, src/ics.[ch] : Add remaining functions.

2007-11-09 Jim Garlick <garlick.jim@gmail.com>

	* src/ics8000.x : Added ICSCONFIG RPCL from 8065 manual.

	* src/ics.[ch] : Wrappers for ICSCONFIG RPC.

	* src/ics8065.c : New utility for accessing ICS 8065 error log.

2007-11-07 Jim Garlick <garlick.jim@gmail.com>

	* src/vxi11.x : Added VXI_WAITLOCK, VXI_ENDW, and VXI_TERMCHRSET
	flag definitions per VXI-11 spec.

	* src/gpib.c : Set defaults for various ib flags and use them
	to set VXI-11 flags as appropriate.

	* src/dg535.c : Implement _interpret_status() callback.
	Add output control functions.

2007-11-06 Jim Garlick <garlick.jim@gmail.com>

	* src/vxi11.x : New VXI-11 RPCL from http://www.agilent.com/find/linux.

	* Makefile : Build VXI-11 support with rpcgen.

	* src/gpib.c : Add VXI-11 support.

	* : Rename local wrapper functions from gpib_ib* to gpib_*.

	* README.vxi : Description of VXI-11 support.

2006-10-01 Jim Garlick <garlick.jim@gmail.com>

	* src/hp603x.[ch] : New (incomplete).

	* src/gpsh.c : Simple shell for testing devices.
	
	* src/gpib.[ch] : Add opaque gd_t type.

	* src/sr620.c : Add save/restore and graph functions.

	* src/tek2230.c: Removed (mine died !)

2006-09-08 Jim Garlick <garlick@speakeasy.net>

	* src/util.[ch]: Use void * for read/write buffers.

	* src/gpib.c: Fix error message typo.

	* src/sr620.[ch]: New (incomplete).

2006-05-13 Jim Garlick <garlick@speakeasy.net>

	* man/hp3488.1: New.

	* man/Makefile: added hp3488.1

	* src/hp3488.[ch]: 
	- hp3488_checksrq(): interpret error register contents.
	- hp3488_list(): include descriptions in slot listing.
	- add --selftest option.
	- _disambiguate_ctype(): turn off display while probing.
	- hp3488_open()/hp3488_close(): pass entire channel list in one command.