@@ -9,7 +9,7 @@ and off-analyzer trace manipulation for the
 1630/1631 logic analyzer/oscilloscope</a>.  
 Here is a 1631A screen dump of an FM signal source produced with the command:
 <pre>
-hp1630 --screen-dump | hptopbm &gt file
+hp1630 --print-screen | hptopbm &gt file
 </pre>
 <p>
 <hr>
